fix(recipes): retain process instance state imports
Ensure generated enum references survive unused-import cleanup.\n\nRefs #2498\n\nCo-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>

Signed-off-by: Peter Bojtos <peter.bojtos@camunda.com>